--- a/Index.html
+++ b/Index.html
@@ -3,16 +3,16 @@
 <head>
 	<title>Integration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="katty.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="katty.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<section id="container-Projects">
+	<section class="container-Projects">
 		<h2 class="tittle">Projects</h2>
 		<nav id="personal-nav" class="text-center">
 			<ul class="nav nav-pills center-pills">
-	  			<li class="active"><a href="#">Trending</a></li>
+	  			<li class="active-nav-item"><a href="#">Trending</a></li>
 	  			<li><a href="#">Language</a></li>
 	  			<li><a href="#">Speech</a></li>
 	  			<li><a href="#">Vision</a></li>
@@ -23,7 +23,7 @@
 		<div class="container container-boxes">
 			<div class="row gold-boxes1">
 			  <div class="col-md-3 box-gold">
-			  	<h4>Swift</h4>
+			  	<p class="box-gold-subtext">Swift</p>
 			  	<h3>IBM Cognitive Catalyst Community</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
@@ -31,7 +31,7 @@
 			  </div>
 
 			  <div class="col-md-3 col-md-offset-1 box-gold">
-			  	<h4>Phyton</h4>
+			  	<p class="box-gold-subtext">Phyton</p>
 			  	<h3>RR Costum Scorers Proxy App</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
@@ -39,7 +39,7 @@
 			  </div>
 
 			  <div class="col-md-3 col-md-offset-1 box-gold">
-			  <h4>HTML</h4>
+			  	<p class="box-gold-subtext">HTML</p>
 			  	<h3>Retrieve and Rank Grand Truth Tooling</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
@@ -50,7 +50,7 @@
 			<div class="row gold-boxes2">
 
 			  <div class="col-md-3 box-gold">
-			  	<h4>Phyton</h4>
+			  	<p class="box-gold-subtext">Phyton</p>
 			  	<h3>Document Segmenter</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
@@ -58,7 +58,7 @@
 			  </div>
 
 			  <div class="col-md-3 col-md-offset-1 box-gold">
-			  	<h4>Swift</h4>
+			  	<p class="box-gold-subtext">Swift</p>
 			  	<h3>QA Safe strings</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
@@ -66,23 +66,21 @@
 			  </div>
 
 			  <div class="col-md-3 col-md-offset-1 box-gold">
-			  	<h4>Java</h4>
+			  	<p class="box-gold-subtext">Java</p>
 			  	<h3>Annotations Assist</h3>
 			  	<p>15 Developers</p>
 			  	<p>Discover details of the IBM Design Language animation update, where the moving parts of the user interface meet the business machine.</p>
 			  	<a href="#">Read more...</a>
 			  </div>
-			</div>
 		</div>
-
 		<div class="row text-center">
-			<div class="col-md-4 col-md-offset-4">
+			<div class="col-md-3 col-md-offset-4">
 				<button class="final-button">Browse All Projects</button>
 			</div>
 		</div>
+	</div>
 
 	</section>
-
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
