--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="sofia.css">
 </head>
 <body>
 
-
+	<section id="Sofia">
+		<div class="container">
+			
+			<h3>Quick Started Guide</h3>
+			<p>Area you new Watson technology?</p>
+			<button type="button" class="btn container_button">Start Quick Learning</button>
+		</div>
+		<footer class="raw">
+			<div class="col-md-6">
+				<button type="button" class="btn btn-link col-md-2">Contact</button>
+				<button type="button" class="btn btn-link col-md-2">Privacy</button>
+				<button type="button" class="btn btn-link col-md-2">Terms of use</button>
+				<button type="button" class="btn btn-link col-md-2">Accessibility</button>
+			</div>
+			<div class="col-md-6 navbar-rigth">
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Youtube</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Twitter</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Facebook</button>
+			</div>
+		</footer>
+	
+		
+	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
