--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,30 @@
 	<title>Integration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Style.css">
+	<link rel="stylesheet" type="text/css" href="marcelo-c.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-
+	<section id="marcecandil">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h1>13.435</h1>
+					<p>Developers have joined</p>
+				</div>			
+				<div class="col-md-4">
+					<h1>1943</h1>
+					<p>Software has benn developed</p>
+				</div>
+			
+				<div class="col-md-4">
+					<h1>6346</h1>
+					<p>Topics has been discussed</p>
+				</div>
+			</div>
+		</div>
+		
+	</section>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
