--- a/Index.html
+++ b/Index.html
@@ -16,17 +16,17 @@
 			<p>Area you new Watson technology?</p>
 			<button type="button" class="btn container_button">Start Quick Learning</button>
 		</div>
-		<footer class="raw">
+		<footer class="row">
 			<div class="col-md-6">
-				<button type="button" class="btn btn-link col-md-2">Contact</button>
-				<button type="button" class="btn btn-link col-md-2">Privacy</button>
-				<button type="button" class="btn btn-link col-md-2">Terms of use</button>
-				<button type="button" class="btn btn-link col-md-2">Accessibility</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Contact</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Privacy</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Terms of use</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer">Accessibility</button>
 			</div>
 			<div class="col-md-6 navbar-rigth">
-				<button type="button" class="btn btn-link col-md-2 deco_footer">Youtube</button>
-				<button type="button" class="btn btn-link col-md-2 deco_footer">Twitter</button>
-				<button type="button" class="btn btn-link col-md-2 deco_footer">Facebook</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer_links">Youtube</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer_links">Twitter</button>
+				<button type="button" class="btn btn-link col-md-2 deco_footer_links">Facebook</button>
 			</div>
 		</footer>
 	
