Tabla de la página

--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,88 @@
 <head>
 	<title>Integration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Style.css">
+	<link rel="stylesheet" type="text/css" href="vero.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-
+	<section>
+		<div>
+			<div>
+			<h1 class="titulo-tabla">Forums</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-1">
+				<table class="style-table">
+					<thead>
+						<th class="head-table">Topics</th>
+						<th class="head-table">Category</th>
+						<th class="head-table">Author</th>
+						<th class="head-table">Repiles</th>
+						<th class="head-table">Views</th>
+						<th class="head-table">Last Post</th>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="body-table"> 
+								<img class="star" src="img/star-yellow.jpg"/>
+								Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
+							<td class="body-table">Improvements</td>
+							<td class="body-table">Developer 21</td>
+							<td class="body-table">281</td>
+							<td class="body-table">8.972</td>
+							<td class="body-table">Yesterday</td>
+						</tr>
+						<tr>
+							<td class="body-table">
+								<img class="star" src="img/star-yellow.jpg"/>
+								Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
+							<td class="body-table">Tips and Best Practice</td>
+							<td class="body-table">Developer 15</td>
+							<td class="body-table">892</td>
+							<td class="body-table">10.982</td>
+							<td class="body-table">9 hours ago</td>
+						</tr>
+						<tr>
+							<td class="body-table">
+								<img class="star" src="img/star-gray.jpg"/>
+								Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
+							<td class="body-table">Improvements</td>
+							<td class="body-table">Developer 21</td>
+							<td class="body-table">281</td>
+							<td class="body-table">8.972</td>
+							<td class="body-table">11.03.2015</td>
+						</tr>
+						<tr>
+							<td class="body-table">
+								<img class="star" src="img/star-gray.jpg"/>
+								Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
+							<td class="body-table">Tips and Best Practice</td>
+							<td class="body-table">Developer 21</td>
+							<td class="body-table">892</td>
+							<td class="body-table">10.982</td>
+							<td class="body-table">11.03.2015</td>
+						</tr>
+						<tr>
+							<td class="body-table">
+								<img class="star" src="img/star-gray.jpg"/>
+								Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
+							<td class="body-table">Project lssues</td>
+							<td class="body-table">Developer 15</td>
+							<td class="body-table">892</td>
+							<td class="body-table">10.982</td>
+							<td class="body-table">09.03.2015</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-offset-5">
+				<button type="submit" class="button-tabla"><strong>Browse Forums</strong></button>
+			</div>
+		</div>
+	</section>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
