Hice el cambio de parte 2 de la pagina

--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,28 @@
 <head>
 	<title>Integration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="Style.css">
+	<link rel="stylesheet" type="text/css" href="gonzalo.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
 
+	<section id="about-cognetive-catalyst" class="content-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<div class="jumbotron">
+					  <h1>About Cognetive Catalyst</h1>
+						<p>La sentencia del Tribunal de Apelaciones Civil de cuarto Turno considera que a pesar de que la garantia de US$ 1.750 que Full Play presento el ano pasado fue embargada.
+						</p>
+					  	<p><a class="btn btn btn-lg" href="#" role="button">Get started</a></p>
+					</div>	
+				</div>						
+				<div class="col-md-4">
+					<img src="images/video.png" class="img-video">
+				</div>		
+			</div>
+		</div>	
+	</section>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
