--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,47 @@
 	<title>Integration</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="Style.css">
+	<link rel="stylesheet" type="text/css" href="sebastian-a.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
+
 <body>
+
+	<header>
+			<nav class="navbar">
+	  			<div class="container">
+	    			<div class="navbar-header">      
+	    				<a class="navbar-brand" href="#">
+	        				<img alt="Brand" src="logo.png">
+	    				</a>
+	    			</div>
+						<ul class="nav navbar-nav navbar-right">
+	      					<li><a href="#">Learn</a></li>
+	      					<li><a href="#">Projects</a></li>
+	      					<li><a href="#">Forums</a></li>
+	    				</ul>
+	  
+	    		</div>
+	  
+			</nav>
+		<div class=container1>
+			<h1 class="text-center"> We can <strong>do</strong> something <strong>bigger, together</strong></h1>
+			<h4 class="text-center"> Solve problemas collaboratively using IBM Watson</h4>
+		</div>
+
+		<div class="container">
+				<div class="col-md-4 center-block">
+					<h5>Be part of the innovation</h5>
+					<div class="col-md-4 text-center"> 
+						<button id="singlebutton" name="singlebutton" class="btn btn-primary">Get started</button> 
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</header>
+
+
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
