--- a/Index.html
+++ b/Index.html
@@ -190,6 +190,7 @@
     </div>
     </div>
 </section>
+
 <section id="vero">
     <div>
       <div>
@@ -210,7 +211,7 @@
           <tbody>
             <tr>
               <td class="body-table">
-                <img class="star" src="img/star-yellow.jpg"/>
+                <img class="star" src="Images/star-yellow.jpg"/>
                 Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
               <td class="body-table">Improvements</td>
               <td class="body-table">Developer 21</td>
@@ -220,7 +221,7 @@
             </tr>
             <tr>
               <td class="body-table">
-                <img class="star" src="img/star-yellow.jpg"/>
+                <img class="star" src="Images/star-yellow.jpg"/>
                 Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
               <td class="body-table">Tips and Best Practice</td>
               <td class="body-table">Developer 15</td>
@@ -230,7 +231,7 @@
             </tr>
             <tr>
               <td class="body-table">
-                <img class="star" src="img/star-gray.jpg"/>
+                <img class="star" src="Images/star-gray.jpg"/>
                 Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
               <td class="body-table">Improvements</td>
               <td class="body-table">Developer 21</td>
@@ -240,7 +241,7 @@
             </tr>
             <tr>
               <td class="body-table">
-                <img class="star" src="img/star-gray.jpg"/>
+                <img class="star" src="Images/star-gray.jpg"/>
                 Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
               <td class="body-table">Tips and Best Practice</td>
               <td class="body-table">Developer 21</td>
@@ -250,7 +251,7 @@
             </tr>
             <tr>
               <td class="body-table">
-                <img class="star" src="img/star-gray.jpg"/>
+                <img class="star" src="Images/star-gray.jpg"/>
                 Cras quis nulla commodo, aliquam lectus sed, blandit augue.</td>
               <td class="body-table">Project lssues</td>
               <td class="body-table">Developer 15</td>
@@ -268,6 +269,7 @@
       </div>
     </div>
 </section>
+
 <section id="Sofia">
   	<div class="container">
 
@@ -289,6 +291,7 @@
   		</div>
   	</footer>
 </section>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
